--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="reset.css">
 </head>
 <body>
-    <header class="cabecalho">
-        <span class="cabecalho-menu-hamburg"></span>
-        <img src="img/Logo.svg" alt="logo">
-        <a href="#"><img src="img/Favoritos.svg" alt=""></a>
-        <a href="#"><img src="img/Sacola.svg" alt=""></a>
-        <a href="#"><img src="img/Usuário.svg" alt=""></a>
-    </header>
-    
+        <header class="cabeçalho">
+            <span class="cabeçalho__menu-hamburguer"></span>
+            <img src="img/Logo.svg" alt="Logo da AluraBooks">
+            <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
+            <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
+            <a href="#"><img src="img/Usuario.png" alt="Meu perfil"></a>
+        </header>
+ 
 </body>
 </html>
